Fixed moving start and end out of bounds

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -28,13 +28,13 @@
     background-color:red !important; 
 }
 .visited{
-    animation: onvisit 1s;
+    animation: onvisit 0.5s;
     background-color:dodgerblue;
 }
 .shortest-path{
     animation: onshortpath 0.2s;
     background-color:dodgerblue;
-    background-image: linear-gradient(darkblue,darkblue);
+    background-image: linear-gradient(yellow,yellow);
     background-repeat: no-repeat;
     transition:background-size 0.5s ease;
     background-position:50% 50%;
@@ -44,7 +44,7 @@
 }
 @keyframes onshortpath{
     0%{
-        background-size:50% 50%;
+        background-size:0% 0%;
     }
     100%{
         background-size:100% 100%;
